--- a/Classes/LogoutViewController.xib
+++ b/Classes/LogoutViewController.xib
@@ -11,7 +11,7 @@
 			<string key="NS.object.0">87</string>
 		</object>
 		<array class="NSMutableArray" key="IBDocument.EditedObjectIDs">
-			<integer value="15"/>
+			<integer value="13"/>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -40,7 +40,7 @@
 						<array key="IBUIItems">
 							<object class="IBUINavigationItem" id="242933316">
 								<reference key="IBUINavigationBar" ref="239282953"/>
-								<string key="IBUITitle">Log Out</string>
+								<string key="IBUITitle">Switch User</string>
 								<object class="IBUIBarButtonItem" key="IBUILeftBarButtonItem" id="1016383034">
 									<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 									<int key="IBUIStyle">1</int>
